src/test/ui/const-generics/raw-ptr-const-param.stderr
warning: the feature `const_generics` is incomplete and may cause the compiler to crash
  --> $DIR/raw-ptr-const-param.rs:1:12
   |
LL | #![feature(const_generics, const_compare_raw_pointers)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

error[E0741]: the types of const generic parameters must derive `PartialEq` and `Eq`
  --> $DIR/raw-ptr-const-param.rs:4:23
   |
LL | struct Const<const P: *const u32>;
   |                       ^^^^^^^^^^ `*const u32` doesn't derive both `PartialEq` and `Eq`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0741`.
